--- a/css/contact.css
+++ b/css/contact.css
@@ -116,6 +116,7 @@
         font-size: 32px;
         line-height: 40px;
         margin-top: 2em;
+        color: white;
     }
     .the_title_text {
         max-width: 820px;
@@ -124,6 +125,7 @@
         font-size: 16px;
         font-weight: 400;
         line-height: 28px;
+        color: white;
     }
 
     .contact-us-box {
@@ -157,6 +159,7 @@
         margin-left: 3em;
         margin-right: 3em;
         margin-bottom: 6m;
+        color: white;
     }
     
     .contact-form {
