color change for contact box

--- a/css/contact.css
+++ b/css/contact.css
@@ -132,7 +132,7 @@
     .contact-us-box {
         width: 25%;
         height: 300px;
-        background-color: #b394b3;
+        background-color: #ccbed4;
         float: right;
         display: flex;
         flex-direction: column;
