started the fix the resources page

--- a/css/resources.css
+++ b/css/resources.css
@@ -247,3 +247,46 @@
       from {opacity: 0} 
       to {opacity: 1}
   }
+
+  .paragraph{
+    margin-left: 2em;
+    margin-right: 2em;
+    color: white;
+  }
+
+  .dropdownbuton {
+    background-color: #cd9ee9;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+  }
+  
+  .dropdownbuton:hover, .dropdownbuton:focus {
+    background-color: #cd9ee9;
+    color: white;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+  }
+  
+  .dropdown-content {
+    display: none;
+    background-color: black;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  
+  .dropdown-content p {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .show {display: block;}
