--- a/css/contact.css
+++ b/css/contact.css
@@ -110,12 +110,14 @@
         font-family: 'Merriweather Sans', sans-serif;
         background-color: #335e7e;
     }
+    
     .the_title {
         text-align: center;
         letter-spacing: -.02em;
         font-size: 32px;
         line-height: 40px;
         margin-top: 2em;
+        color: white;
     }
     .the_title_text {
         max-width: 820px;
@@ -124,12 +126,13 @@
         font-size: 16px;
         font-weight: 400;
         line-height: 28px;
+        color: white;
     }
 
     .contact-us-box {
         width: 25%;
         height: 300px;
-        background-color: #b394b3;
+        background-color: #ccbed4;
         float: right;
         display: flex;
         flex-direction: column;
@@ -157,6 +160,7 @@
         margin-left: 3em;
         margin-right: 3em;
         margin-bottom: 6m;
+        color: white;
     }
     
     .contact-form {
