--- a/css/404.css
+++ b/css/404.css
@@ -6,10 +6,6 @@
     box-sizing: border-box;
   }
 
-  body{
-    color: black;
-  }
-
   /* header of page css ----------------------------*/
 
   /* code for header blending in when scrolling */
@@ -106,6 +102,45 @@
     font-size: 60px;
   }
 
+  /* Slideshow container */
+  .slideshow-container {
+    position: relative;
+    margin: auto;
+    width: 100%;
+    left: 0;
+    right: 0;
+  }
+  
+  .slideshow-container img {
+    width: 100%;
+    height: auto;
+  }
+  
+  /* On hover */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* The dots */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active,
+  .dot:hover {
+    background-color: #717171;
+  }
+  
+  
+
 
   /* page body below---------------------*/
 
@@ -114,69 +149,46 @@
     /* font style and color of entire body*/
     font-family: 'Merriweather Sans', sans-serif;
     background-color: #335e7e;
-    overflow: scroll;
   }
 
-  #block1 {
-    display: flex;
-    align-items: center;
+  h1 {
+    margin-top: 5em;
+    margin-bottom: 2em;
+    color: white;
   }
-  
-  .block1-content {
-    width: 100%;
-    font-size: 1.5em;
-    margin-left: 4em;
-    margin-right: 4em;
-  }
-  
-  .block1-content h2 {
-    margin-top: 2em;
-    font-size: larger;
-    word-spacing: 2px;
-    color: #cd9ee9;
-  }
-  
-  .block1-content p {
+
+  .p404 {
     font-size: large;
     word-spacing: 2px;
     line-height: 1.5;
     width: 100%;
-  }
-
-  h1 {
-    margin-top: 2em;
-    margin-bottom: 2em;
-    color: #cd9ee9;
-  }
-
-  /*Get this switch color fade thing to work*/
-
-  .ol {
     color: white;
   }
 
-  .li{
-    margin-left: 4em;
+  .button {
+    background-color: #cd9ee9;
+    color: #000;
+    border: none;
+    padding: 5px 15px;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 12px;
+    opacity: 0.6;
+    transition: 0.3s;
+    margin-bottom: .85em;
   }
 
-  .li p{
+  .button:hover {
+    background-color: #cd9ee9;
     color: white;
   }
 
-  .li a{
-    color: white;
-    text-decoration: underline;
-    margin-left: 1em;
-  }
-
-  .li a:hover{
-    color: #cd9ee9;
-    transition: 0.1s ease-out;
-    text-decoration: underline;
-  }
   
-
-  /* page footer below-------------------- */
   
   /*footer basics/alignment*/
   .footer-container
@@ -227,70 +239,4 @@
     color: #cd9ee9;
     transition: 0.1s ease-out;
     text-decoration: underline;
-  }
-
-  .unorderd_list{
-    font-size: medium;
-    word-spacing: 2px;
-    width: 600px;
-    margin-left: 8em; 
-    margin-bottom: 3em;
-  }
-  .paragraph{
-    margin-left: 2em;
-    margin-right: 2em;
-    color: white;
-  }
-
-  .dropdownbuton {
-    background-color: #cd9ee9;
-    color: black;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-  }
-  
-  .dropdownbuton:hover, .dropdownbuton:focus {
-    background-color: #cd9ee9;
-    color: white;
-  }
-  
-  .dropdown {
-    position: relative;
-    display: inline-block;
-    width: 100%;
-  }
-  
-  .dropdown-content {
-    display: none;
-    background-color: #335e7e;
-    overflow: auto;
-  }
-  
-  .dropdown-content p {
-    color: white;
-    padding: 12px 16px;
-    display: block;
-  }
-
-  .dropdown-content h2 {
-    color: white;
-    padding: 12px 16px;
-    display: block;
-    margin-left: 1em;
-  }
-  
-  .show {display: block;}
-
-  .fade {
-    animation-name: fade;
-    animation-duration: 5s;
-    transition: opacity 0.75s;
-  }
-  
-  @keyframes fade {
-    from {opacity: 0.5} 
-    to {opacity: 1}
   }
