buttons for res and white text 7/25/23

--- a/css/about_me.css
+++ b/css/about_me.css
@@ -110,6 +110,7 @@
     /* font style and color of entire body*/
     font-family: 'Merriweather Sans', sans-serif;
     background-color: #335e7e;
+    color: white;
   }
 
   #block1 {
