--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -149,6 +149,7 @@
     /* font style and color of entire body*/
     font-family: 'Merriweather Sans', sans-serif;
     background-color: #335e7e;
+    color: white;
   }
 
   #block1 {
@@ -200,10 +201,13 @@
   }
   
   .box1:hover .box1-title,
-  .box1:hover a {
+  .box1:hover a,
+  .box1:hover p,
+  .box1:hover span{
     color: white;
     transition: color 0.3s;
   }
+
 
   .box1-link {
     text-decoration: none;
