--- a/css/resources.css
+++ b/css/resources.css
@@ -146,7 +146,7 @@
   h1 {
     margin-top: 2em;
     margin-bottom: 2em;
-    color: #cd9ee9;
+    color: white;
   }
 
   /*Get this switch color fade thing to work*/
