--- a/css/mediaCI.css
+++ b/css/mediaCI.css
@@ -1,113 +1,534 @@
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-    .prev, .next,.text {font-size: 11px}
-  }
-  
-  /*Some test stuff for if the height of the screen is less than 450px*/
-  @media screen and (max-height: 450px) 
-  {
-    .overlay a {font-size: 20px}
-    .overlay .closebtn {
-    font-size: 40px;
-    top: 15px;
-    right: 35px;
-    }
-  }
-  
-  /* Screen Sie differences for footer-------------*/
-  @media screen and (max-width: 1150px) 
-  {
-   .footer
-   {
-     height: 60vh;
-   }
-  }
-  
-  @media screen and (max-width: 820px) 
-  {
-   .footer
-   {
-     padding-top: 1rem;
-   }
-  }
-  
-  @media screen and (max-width: 720px) 
-  {
-   .footer
-   {
-     padding-bottom: 1rem;
-   }
-  }
-  
-  /*1426 px*/
-  @media screen and (max-width:1427px){
-    
-  }
-  
-  
-  /*1280 px*/
-  @media screen and (max-width:1285px){
-    
-  }
-  
-  /*1120 px*/
-  @media screen and (max-width:1190px){
+  .prev, .next,.text {font-size: 11px}
+}
 
+/*Some test stuff for if the height of the screen is less than 450px*/
+@media screen and (max-height: 450px) 
+{
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+  font-size: 40px;
+  top: 15px;
+  right: 35px;
   }
-  
-  
-  /*1024 px*/
-  @media screen and (max-width:1025px){
-  
-  }
-  
-  /*912 px or surface pro*/
-  @media screen and (max-width:913px){
-  
-  }
-  
-  /*820 px or ipad air*/
-  @media screen and (max-width:821px){
-     
-  
-  }
-  
-   /*768 px or ipad mini*/
-   @media screen and (max-width:769px){
-     
-  
-  }
-  
-  /*690 px*/
-  @media screen and (max-width:690px){
+}
+
+/* Screen Sie differences for footer-------------*/
+@media screen and (max-width: 1150px) 
+{
+ .footer
+ {
+   height: 60vh;
+ }
+}
+
+@media screen and (max-width: 820px) 
+{
+ .footer
+ {
+   padding-top: 1rem;
+ }
+}
+
+@media screen and (max-width: 720px) 
+{
+ .footer
+ {
+   padding-bottom: 1rem;
+ }
+}
+
+/*1426 px*/
+@media screen and (max-width:1427px){
+  .logoFooter{
+      display: none;
+      font-size: 1rem;
+    }
    
-  
-  }
-  
-  
-  /*540px and below*/
-  @media screen and (max-width:541px){
+    .footer-info
+    {
+      margin-right: 2rem;
+    }
    
-  }
-  
-  /*462px*/
-  @media screen and (max-width:463px){
-  
-  }
-  
-  /*415px and below*/
-  @media screen and (max-width:415px){
    
-  
+    .footer-info a
+    {
+      margin-bottom: 1rem;
+      margin-right: 3rem;
+    }
+   
+    .footer{
+      font-size: small;
+      display: table;
+    }
+   
+    .button1{
+      margin-right: 2em;
+    }
+}
+
+
+/*1280 px*/
+@media screen and (max-width:1285px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-right: 4rem;
+    margin-top: 2rem;
   }
-  
-  /*376 px*/
-  @media screen and (max-width:376px){
-    
-  
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 300px;
   }
-  
-  /*280 px or galaxy fold*/
-  @media screen and (max-width:281px){
-     
+
+  .logoFooter{
+    display: none;
   }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+}
+
+/*1120 px*/
+@media screen and (max-width:1190px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-right: 4rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 250px;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+}
+
+
+/*1024 px*/
+@media screen and (max-width:1025px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-right: 4rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 250px;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+}
+
+/*912 px or surface pro*/
+@media screen and (max-width:913px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-right: 4rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 200px;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+}
+
+/*820 px or ipad air*/
+@media screen and (max-width:821px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-right: 4rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 200px;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+
+}
+
+ /*768 px or ipad mini*/
+ @media screen and (max-width:769px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 250px;
+    margin-right: 4rem;
+    margin-top: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 2rem;
+    margin-left: 7rem;
+    width: 200px;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+}
+
+/*690 px*/
+@media screen and (max-width:690px){
+  .logoFooter{
+      display: none;
+      font-size: 1rem;
+    }
+   
+    .footer-info
+    {
+      margin-right: 2rem;
+    }
+   
+   
+    .footer-info a
+    {
+      margin-bottom: 1rem;
+      margin-right: 3rem;
+    }
+   
+    .footer{
+      font-size: small;
+      display: table;
+    }
+   
+    .button1{
+      margin-right: 2em;
+    }
+
+}
+
+
+/*540px and below*/
+@media screen and (max-width:541px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-right: 7.5rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 11rem;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+}
+
+/*462px*/
+@media screen and (max-width:463px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-right: 4rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 7rem;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+   
+}
+
+/*415px and below*/
+@media screen and (max-width:415px){
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-right: 3rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 7rem;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+   
+
+}
+
+/*376 px*/
+@media screen and (max-width:376px){
+
+  .contact-us-box{
+    margin: 0;
+    width: 300px;
+    height: 300px;
+    margin-right: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 6rem;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+   
+
+}
+
+/*280 px or galaxy fold*/
+@media screen and (max-width:281px){
+  .contact-us-box{
+    margin: 0;
+    width: 200px;
+    height: 300px;
+    margin-right: 2rem;
+  }
+
+  .contact-form-container{
+    margin: 0;
+    margin-top: 20rem;
+    margin-left: 3rem;
+    width: 200px;
+  }
+
+  .email{
+    display: inline;
+  }
+
+  .logoFooter{
+    display: none;
+  }
+ 
+  .footer-info
+  {
+    margin-right: 2rem;
+  }
+ 
+ 
+  .footer-info a
+  {
+    margin-bottom: 1rem;
+    margin-right: 3rem;
+  }
+
+  .footer{
+    margin: 0;
+    margin-left: 4rem;
+  }
+
+}
